Estructura de section episode-big y footer y se le da estilos en CSS

--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
 					<nav class="navheader">
 						<ul>
 							<li>
-								<a href="">LIVE</a>
+								<a href="http://5by5.tv/live">LIVE</a>
 							</li>
 							<li>
-								<a href="">SHOWS</a>
+								<a href="http://5by5.tv/broadcasts">SHOWS</a>
 							</li>
 							<li>
-								<a href="">SUBSCRIBE</a>
+								<a href="http://5by5.tv/feeds">SUBSCRIBE</a>
 							</li>
 							<li>
-								<a href="">SCHEDULE</a>
+								<a href="http://5by5.tv/schedule">SCHEDULE</a>
 							</li>
 							<li>
-								<a href="">SUPPORT 5BY5</a>
+								<a href="http://5by5.tv/donate">SUPPORT 5BY5</a>
 							</li>
 							<li>
-								<a href="">ADVERTISE</a>
+								<a href="http://5by5.tv/advertise">ADVERTISE</a>
 							</li>
 							<li>
-								<a href="">CONTACT</a>
+								<a href="http://5by5.tv/contact">CONTACT</a>
 							</li>
 						</ul>
 					</nav>
@@ -44,10 +44,37 @@
 			</div>
 		</div>
 	</header>
-	<section class="">
+	<section class="episode-big">
 		<div class="container">
+			<div class="col-12">
+					<h3 class="title-episodes">Latest Episodes</h3>
+					<a class ="episodes" href="http://5by5.tv/episodes">More Episodes →</a>
+				</div>
 			<div class="row">
-				
+				<div class="col-3">
+					<img src="img/dlc.jpg" height="220" width="220" alt="">
+					<a class="text-episodesbig" href="http://5by5.tv/dlc/118" class="dlc">
+						<span>DLC83</span>
+					</a>
+				</div>
+				<div class="col-3">
+					<img src="img/almanac.jpg" height="220" width="220" alt="">
+					<a  class="text-episodesbig" href="">
+						<span>Ihnatko Almanac 149</span>
+					</a>
+				</div>
+				<div class="col-3">
+					<img src="img/onthegrid.jpg" height="220" width="220" alt="">
+					<a  class="text-episodesbig" href="">
+						<span>On the grid 124</span>
+					</a>
+				</div>
+				<div class="col-3">
+					<img src="img/changelog.jpg" height="220" width="220" alt="">
+					<a  class="text-episodesbig" href="">
+						<span>Changelog 165</span>
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -75,7 +102,11 @@
 	<footer>
 		<div class="container">
 			<div class="row">
-				
+				<div class="col-12">
+					<p>
+						5by5 is a podcast network for geeks, designers, developers, gamers, entrepreneurs, and people like you, with shows hosted by people including Dan Benjamin, Merlin Mann, Horace Dediu, and Jeffrey Zeldman. <a href="http://5by5.tv/about">Read more...</a>
+					</p>
+				</div>
 			</div>
 		</div>
 	</footer>
