Estructura html al 99 porciento y estilos terminados de header. Estilos incompletos del resto de pagina

--- a/index.html
+++ b/index.html
@@ -80,169 +80,181 @@
 			</div>
 		</div>
 	</section>
-	<section class="">
-		<div class="container">
+	<section class="episodesMed">
+		<div class="containerMed">
 			<div class="row">
 				<div class="col-9">
 					<div class="row">
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/amplified.jpg" alt="amplified">
+							<a href="#">Amplified</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast"src="img/thumbs/back-to-work.jpg" alt="back-to-work">
+							<a href="#">Back to work</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast"src="img/thumbs/the-big-show.jpg" alt="the-big-show">
+							<a href="#">The big show</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast"src="img/thumbs/better-know.jpg" alt="betther-know">
+							<a href="#">Better know</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
-						</div>
-						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
-						</div>
-						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
-						</div>
-						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
-						</div>
-						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/cash-corner.jpg" alt="cash-corner">
+							<a href="">Cash corner</a>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/changelog.jpg" alt="changelog">
+							<a href="">Changelog</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/critical-path.jpg" alt="critical-path">
+							<a href="">Critical Path</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/dan.jpg" alt="dan-benjamin-hour">
+							<a href="">Dan Benjamin Hour</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/dlc.jpg" alt="dlc">
+							<a href="">DLC</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
-						</div>
-						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
-						</div>
-						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
-						</div>
-						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
-						</div>
-						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/frequency.jpg" alt="frequency">
+							<a href="">Frequency</a>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/home-work.jpg" alt="home-work">
+							<a href="">Home Work</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/ihnatko.jpg" alt="ihnatko-almanac">
+							<a href="">Ihnatko almanac</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/ohyes.jpg" alt="oh-yes">
+							<a href="">iOhYes</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/getting-there.jpg" alt="getting-there">
+							<a href="">Getting There</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
-						</div>
-						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
-						</div>
-						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
-						</div>
-						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
-						</div>
-						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/movies.jpg" alt="5by5-movies">
+							<a href="">5by5 at the Movies</a>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/mac-power.jpg" alt="mac-power-users">
+							<a href="">Mac Power Users</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/on-the-grid.jpg" alt="on-the-grid">
+							<a href="">On the Grid</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/on-taking-pictures.jpg" alt="on-taking-pictures">
+							<a href="">On Taking Pictures</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/latest-paleo.jpg" alt="latest-in-paleo">
+							<a href="">Latest in Paleo</a>
 						</div>
 						<div class="col-2">
-							<img src="" alt="">
-							<a href=""></a>
+							<img class="podcast" src="img/thumbs/pipeline.jpg" alt="pipeline">
+							<a href="#">Pipeline</a>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-2">
+							<img class="podcast" src="img/thumbs/pipeline-classic.jpg" alt="pipeline-classic">
+							<a href="">Pipeline Classic</a>
+						</div>
+						<div class="col-2">
+							<img class="podcast" src="img/thumbs/podcast-method.jpg" alt="podcast-method">
+							<a href="">Podcast Method</a>
+						</div>
+						<div class="col-2">
+							<img class="podcast" src="img/thumbs/quit.jpg" alt="quit">
+							<a href="">Quit</a>
+						</div>
+						<div class="col-2">
+							<img class="podcast" src="img/thumbs/ruby-on-rails-podcast.jpg" alt="ruby-on-rails-podcast">
+							<a href="">Ruby on Rails Podcast</a>
+						</div>
+						<div class="col-2">
+							<img class="podcast" src="img/thumbs/specials.jpg" alt="5b5-specials">
+							<a href="">5by5 Specials</a>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-2">
+							<img class="podcast" src="img/thumbs/steady.jpg" alt="steady">
+							<a href="">Steady</a>
+						</div>
+						<div class="col-2">
+							<img class="podcast" src="img/thumbs/supercharged.jpg" alt="supercharged">
+							<a href="">Supercharged</a>
+						</div>
+						<div class="col-2">
+							<img class="podcast" src="img/thumbs/web-ahead.jpg" alt="web-ahead">
+							<a href="">Web Ahead</a>
+						</div>
+						<div class="col-2">
+							<img class="podcast" src="img/thumbs/write-for-life.jpg" alt="write-for-your-life">
+							<a href="">Write For Your Life</a>
+						</div>
+						<div class="col-2">
+							<img class="podcast" src="img/thumbs/after-dark.jpg" alt="after-dark">
+							<a href="">After Dark</a>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-2">
+							<img class="podcast" src="img/thumbs/human-survival.jpg" alt="ankward-human-survival-guide">
+							<a href="">Ankward Human Survival Guide</a>
+						</div>
+						<div class="col-2">
+							<img class="podcast" src="img/thumbs/morning-dump.jpg" alt="morning-dump">
+							<a href="">Morning Dump</a>
+						</div>
+						<div class="col-2">
+							<img class="podcast" src="img/thumbs/hablo-geek.jpg" alt="hablo-geek">
+							<a href="">Hablo Geek</a>
+						</div>
+						<div class="col-2">
+							<img class="podcast" src="img/thumbs/puromac.jpg" alt="puromac">
+							<a href="">Puromac</a>
+						</div>
+						<div class="col-2">
+							<img class="podcast" src="img/thumbs/tech-douchebags.jpg" alt="tech-douchebags">
+							<a href="">Tech Douchebags</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-3">
-					<div></div>
-					<div></div>
-					<div></div>
+					<div>
+						<h2>Suscribe to 5by5</h2>
+							<img src="" alt="">	 <a href="">5by5 on iTunes</a>
+								<img src="" alt=""> <a href="">Master RSS Feed</a>	
+								<img src="" alt=""> <a href="">Pocket Casts</a>
+					</div>
+					<div>
+							<h2>5by5 Apps</h2>
+								5by5 Radio for iOS
+								5by5 for Mac OS X
+					</div>
+					<div>
+						<p>Bandwith for July 2015 is sponsored by CacheFly: The fastest, most 								reliable CDN in the business
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -254,6 +266,16 @@
 					<p>
 						5by5 is a podcast network for geeks, designers, developers, gamers, entrepreneurs, and people like you, with shows hosted by people including Dan Benjamin, Merlin Mann, Horace Dediu, and Jeffrey Zeldman. <a href="http://5by5.tv/about">Read more...</a>
 					</p>
+						About 
+						Shows 
+						Subscribe 
+						iTunes 
+						Schedule 
+						Contact 
+						Donate 
+						Advertise 
+						Newsletter
+						Copyright © 2009–2015 by Dan Benjamin and 5by5 Productions LLC in Austin, Texas
 				</div>
 			</div>
 		</div>
